--- a/package.json
+++ b/package.json
@@ -4,30 +4,30 @@
   "version": "1.0.0",
   "scripts": {
     "dev": "astro dev",
-    "start": "astro dev",
+    "start": "node ./dist/server/entry.mjs",
     "build": "astro build",
     "preview": "astro preview",
     "astro": "astro"
   },
   "dependencies": {
-    "@astrojs/react": "^3.3.1",
     "@astrojs/node": "^8.0.1",
+    "@astrojs/react": "^3.3.1",
+    "@astrojs/vercel": "^7.8.2",
     "@supabase/supabase-js": "^2.39.0",
     "@tanstack/react-query": "^5.17.9",
     "astro": "^4.0.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "zod": "^3.22.4",
     "recharts": "^2.10.3",
+    "zod": "^3.22.4",
     "zustand": "^4.4.7"
   },
   "devDependencies": {
+    "@astrojs/tailwind": "^5.1.0",
     "@types/node": "^20.10.6",
     "@types/react": "^18.2.45",
     "@types/react-dom": "^18.2.18",
     "tailwindcss": "^3.4.0",
-    "@astrojs/tailwind": "^5.1.0",
     "typescript": "^5.3.3"
   }
 }
-
