--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "muebleria-cotizador",
   "type": "module",
   "version": "1.0.0",
+  "engines": {
+    "node": "20.x"
+  },
   "scripts": {
     "dev": "astro dev",
     "start": "node ./dist/server/entry.mjs",
