--- a/package.json
+++ b/package.json
@@ -19,8 +19,9 @@
     "@supabase/supabase-js": "^2.39.0",
     "@tanstack/react-query": "^5.17.9",
     "astro": "^4.0.7",
+    "puppeteer": "^24.31.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "react-dom": "^18.3.1",
     "recharts": "^2.10.3",
     "zod": "^3.22.4",
     "zustand": "^4.4.7"
@@ -29,7 +30,7 @@
     "@astrojs/tailwind": "^5.1.0",
     "@types/node": "^20.10.6",
     "@types/react": "^18.2.45",
-    "@types/react-dom": "^18.2.18",
+    "@types/react-dom": "^18.3.7",
     "tailwindcss": "^3.4.0",
     "typescript": "^5.3.3"
   }
