--- a/package.json
+++ b/package.json
@@ -16,10 +16,12 @@
     "@astrojs/node": "^8.0.1",
     "@astrojs/react": "^3.3.1",
     "@astrojs/vercel": "^7.8.2",
+    "@sparticuz/chromium": "^141.0.0",
     "@supabase/supabase-js": "^2.39.0",
     "@tanstack/react-query": "^5.17.9",
     "astro": "^4.0.7",
     "puppeteer": "^24.31.0",
+    "puppeteer-core": "^24.31.0",
     "react": "^18.2.0",
     "react-dom": "^18.3.1",
     "recharts": "^2.10.3",
