--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "puppeteer-core": "^24.31.0",
     "react": "^18.2.0",
     "react-dom": "^18.3.1",
+    "react-router-dom": "^7.9.6",
     "recharts": "^2.10.3",
     "zod": "^3.22.4",
     "zustand": "^4.4.7"
@@ -33,6 +34,7 @@
     "@types/node": "^20.10.6",
     "@types/react": "^18.2.45",
     "@types/react-dom": "^18.3.7",
+    "@types/react-router-dom": "^5.3.3",
     "tailwindcss": "^3.4.0",
     "typescript": "^5.3.3"
   }
